--- a/app/index.html
+++ b/app/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EmberLondon</title>
+    <title>Ember London</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     {{content-for 'head'}}
-
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/ember-london.css">
+    <link rel="stylesheet" href="assets/emberlondon.css">
+    <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300' rel='stylesheet' type='text/css'>
   </head>
   <body>
     {{content-for 'body'}}
-
     <script src="assets/vendor.js"></script>
-    <script src="assets/ember-london.js"></script>
+    <script src="assets/emberlondon.js"></script>
   </body>
 </html>
