--- a/tests/index.html
+++ b/tests/index.html
@@ -11,7 +11,7 @@
     {{content-for 'test-head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/ember-london.css">
+    <link rel="stylesheet" href="assets/emberlondon.css">
     <link rel="stylesheet" href="assets/test-support.css">
     <style>
       #ember-testing-container {
@@ -38,7 +38,7 @@
     {{content-for 'test-body'}}
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
-    <script src="assets/ember-london.js"></script>
+    <script src="assets/emberlondon.js"></script>
     <script src="testem.js"></script>
     <script src="assets/test-loader.js"></script>
   </body>
